Tsff-1205 redigere flere brev (#700)
* Utvider vedtaksbrev valg med dokumentmaltype da vi kan ha flere brev pr behandling og begge kan redigeres.
Tar i bruk dokumentmal type fra vedtaksbrevvalg i forhåndsvis og støtter nå å forhåndsvise flere vedtaksbrev pr behandling avhengig av input. Pr nå brukes det bare for test.

* tilbyr tomt brev mal ved helmanuell brev

* validering på tom brev bestilling

* fjerner egen mal for tom vedtaksbrev og bruker bare bygger. Det gjør det lettere å validere at manuelt brev ikke har preutfylt tekst.
Endrer ManueltVedtaksbrevInnholdBygger til å hente valg basert på originalmal og validere html'en. Validering er basert på k9-formidling

* test for flyt med redigering av flere brev

* lagring av valg for flere  brev

* hjelpemetode for å lage behandling med aksjonspunkt

* test for kombinasjon redigert og hindret

* støtte for håndtere kombinasjon av redigerte, hindrede og automatiske brev.

* ung-sak.openapi.json updated by build pipeline 


skip-checks:true

Bruker ikke BadRequestException da det ikke funker i test uten egen jetty web-dependency

* deaktiverer gamle valg ved tilbakehopp
henter tidligere redigerte tekst på samme mal til frontend hvis det er ønskelig å bruke i redigering.

* ung-sak.openapi.json updated by build pipeline 


skip-checks:true


* ung-sak.openapi.json updated by build pipeline 


skip-checks:true

* Fjerner jetbrains @NotNull

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>