@@ -7,12 +7,8 @@ import no.nav.k9.prosesstask.api.ProsessTask;
 import no.nav.k9.prosesstask.api.ProsessTaskData;
 import no.nav.k9.prosesstask.api.ProsessTaskStatus;
 import no.nav.k9.prosesstask.api.ProsessTaskTjeneste;
-import no.nav.ung.kodeverk.behandling.BehandlingStegType;
-import no.nav.ung.kodeverk.behandling.aksjonspunkt.AksjonspunktDefinisjon;
 import no.nav.ung.kodeverk.dokument.DokumentMalType;
 import no.nav.ung.sak.behandlingslager.behandling.Behandling;
-import no.nav.ung.sak.behandlingslager.behandling.aksjonspunkt.Aksjonspunkt;
-import no.nav.ung.sak.behandlingslager.behandling.aksjonspunkt.AksjonspunktTestSupport;
 import no.nav.ung.sak.behandlingslager.formidling.VedtaksbrevValgEntitet;
 import no.nav.ung.sak.behandlingslager.formidling.VedtaksbrevValgRepository;
 import no.nav.ung.sak.behandlingslager.formidling.bestilling.*;
@@ -24,7 +20,6 @@ import no.nav.ung.sak.formidling.scenarioer.KombinasjonScenarioer;
 import no.nav.ung.sak.test.util.UngTestRepositories;
 import no.nav.ung.sak.test.util.behandling.TestScenarioBuilder;
 import no.nav.ung.sak.test.util.behandling.UngTestScenario;
-import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
@@ -32,6 +27,7 @@ import java.time.LocalDate;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 @ExtendWith(CdiAwareExtension.class)
 @ExtendWith(JpaExtension.class)
@@ -116,33 +112,28 @@ class VurderVedtaksbrevTaskTest {
         List<BrevbestillingEntitet> bestillinger = brevbestillingRepository.hentForBehandling(behandling.getId());
         assertThat(bestillinger).hasSize(2);
 
-        assertThat(bestillinger)
-            .anySatisfy(bestilling -> {
-                assertThat(bestilling.getBehandlingId()).isEqualTo(behandling.getId());
-                assertThat(bestilling.getDokumentMalType()).isEqualTo(DokumentMalType.ENDRING_INNTEKT);
-                assertThat(bestilling.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
-            })
-            .anySatisfy(bestilling -> {
-                assertThat(bestilling.getBehandlingId()).isEqualTo(behandling.getId());
-                assertThat(bestilling.getDokumentMalType()).isEqualTo(DokumentMalType.ENDRING_BARNETILLEGG);
-                assertThat(bestilling.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
-            });
+        var bestilling1 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.ENDRING_INNTEKT))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling1.getBehandlingId()).isEqualTo(behandling.getId());
+        assertThat(bestilling1.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
+        var bestilling2 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.ENDRING_BARNETILLEGG))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling2.getBehandlingId()).isEqualTo(behandling.getId());
+        assertThat(bestilling2.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
 
 
         var vedtaksbrevResultater = behandlingVedtaksbrevRepository.hentForBehandling(behandling.getId());
-        assertThat(vedtaksbrevResultater).hasSize(2);
-
-        assertThat(vedtaksbrevResultater)
-            .anySatisfy(resultat -> {
-                assertThat(resultat.getBrevbestilling().getId()).isEqualTo(bestillinger.getFirst().getId());
-                assertThat(resultat.getResultatType()).isEqualTo(VedtaksbrevResultatType.BESTILT);
-                assertThat(resultat.getBeskrivelse()).isNotNull();
-            })
-            .anySatisfy(resultat -> {
-                assertThat(resultat.getBrevbestilling().getId()).isEqualTo(bestillinger.get(1).getId());
-                assertThat(resultat.getResultatType()).isEqualTo(VedtaksbrevResultatType.BESTILT);
-                assertThat(resultat.getBeskrivelse()).isNotNull();
-            });
+        assertThat(vedtaksbrevResultater).extracting(it -> it.getBrevbestilling().getId())
+            .containsExactlyInAnyOrder(bestillinger.get(0).getId(), bestillinger.get(1).getId());
+        assertThat(vedtaksbrevResultater).extracting(BehandlingVedtaksbrev::getResultatType)
+            .containsExactly(VedtaksbrevResultatType.BESTILT, VedtaksbrevResultatType.BESTILT);
+        assertThat(vedtaksbrevResultater).extracting(BehandlingVedtaksbrev::getBeskrivelse)
+            .isNotNull();
 
 
         var tasker = prosessTaskTjeneste.finnAlle(VedtaksbrevBestillingTask.TASKTYPE, ProsessTaskStatus.KLAR);
@@ -158,6 +149,81 @@ class VurderVedtaksbrevTaskTest {
         assertThat(tasker).allSatisfy(pt -> {
             assertThat(pt.getGruppe()).contains(BrevbestillingTaskGenerator.FORMIDLING_GRUPPE_PREFIX);
         });
+    }
+
+    @Test
+    void oppretterBestillingerVedKombinasjonRedigertOgAutomatisk() {
+        UngTestScenario ungTestScenario = KombinasjonScenarioer
+            .kombinasjon_endringMedInntektOgFødselAvBarn(LocalDate.of(2025, 11, 1));
+
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        var behandling = EndringInntektScenarioer.lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+        behandling.avsluttBehandling();
+
+        String redigertBrevHtml = "<h1>redigert</h1>";
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_BARNETILLEGG, true, false, redigertBrevHtml)
+        );
+
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        task.prosesser(prosessTaskData);
+
+        // Assert
+        List<BrevbestillingEntitet> bestillinger = brevbestillingRepository.hentForBehandling(behandling.getId());
+        assertThat(bestillinger).hasSize(2);
+
+        var bestilling1 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.ENDRING_INNTEKT))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling1.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
+        var bestilling2 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.MANUELT_VEDTAK_DOK))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling2.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
+    }
+
+    @Test
+    void oppretterBestillingVedKombinasjonHindretOgRedigert() {
+        UngTestScenario ungTestScenario = KombinasjonScenarioer
+            .kombinasjon_endringMedInntektOgFødselAvBarn(LocalDate.of(2025, 11, 1));
+
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        var behandling = EndringInntektScenarioer.lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+
+        behandling.avsluttBehandling();
+
+        String redigertBrevHtml = "<h1>redigert</h1>";
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_BARNETILLEGG, false, true, null)
+        );
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_INNTEKT, true, false, redigertBrevHtml)
+        );
+
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        task.prosesser(prosessTaskData);
+
+        // Assert
+        List<BrevbestillingEntitet> bestillinger = brevbestillingRepository.hentForBehandling(behandling.getId());
+        assertThat(bestillinger).hasSize(1);
+
+        var bestilling2 = bestillinger.stream()
+            .filter(b -> b.getDokumentMalType().equals(DokumentMalType.MANUELT_VEDTAK_DOK))
+            .findFirst()
+            .orElseThrow();
+        assertThat(bestilling2.getStatus()).isEqualTo(BrevbestillingStatusType.NY);
+
     }
 
     @Test
@@ -188,7 +254,6 @@ class VurderVedtaksbrevTaskTest {
         assertThat(tasker).hasSize(0);
     }
 
-    @NotNull
     private static ProsessTaskData lagTask(Behandling behandling) {
         var prosessTaskData = ProsessTaskData.forProsessTask(VurderVedtaksbrevTask.class);
         prosessTaskData.setBehandling(behandling.getFagsakId(), behandling.getId(), behandling.getAktørId().getId());
@@ -204,7 +269,7 @@ class VurderVedtaksbrevTaskTest {
         var behandling = scenarioBuilder.getBehandling();
 
         vedtaksbrevValgRepository.lagre(
-            new VedtaksbrevValgEntitet(behandling.getId(), false, true, null)
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.INNVILGELSE_DOK, false, true, null)
         );
 
         var prosessTaskData = lagTask(behandling);
@@ -231,12 +296,15 @@ class VurderVedtaksbrevTaskTest {
     void manuellBrevHvisRedigert() {
         // Arrange
         UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
-        UngTestScenario ungTestScenario = EndringInntektScenarioer.endring0KrInntekt_19år(LocalDate.of(2025, 11, 1));
-        TestScenarioBuilder scenarioBuilder = TestScenarioBuilder.builderMedSøknad().medUngTestGrunnlag(ungTestScenario);
-        var behandling = lagAvsluttetBehandlingMedAksjonspunkt(scenarioBuilder, ungTestRepositories);
+        UngTestScenario ungTestScenario = EndringInntektScenarioer.endringMedInntektPå10k_19år(LocalDate.of(2025, 11, 1));
+
+        var behandling = EndringInntektScenarioer
+            .lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+
+        behandling.avsluttBehandling();
 
         vedtaksbrevValgRepository.lagre(
-            new VedtaksbrevValgEntitet(behandling.getId(), true, false, "tekst")
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_INNTEKT , true, false, "tekst")
         );
 
         var prosessTaskData = lagTask(behandling);
@@ -263,16 +331,51 @@ class VurderVedtaksbrevTaskTest {
         assertBestillingTask(task, bestilling);
     }
 
-    @NotNull
-    private static Behandling lagAvsluttetBehandlingMedAksjonspunkt(TestScenarioBuilder scenarioBuilder, UngTestRepositories ungTestRepositories) {
-        scenarioBuilder.leggTilAksjonspunkt(AksjonspunktDefinisjon.KONTROLLER_INNTEKT, BehandlingStegType.KONTROLLER_REGISTER_INNTEKT);
-        var behandling = scenarioBuilder.buildOgLagreMedUng(ungTestRepositories);
-        Aksjonspunkt aksjonspunkt = behandling.getAksjonspunktFor(AksjonspunktDefinisjon.KONTROLLER_INNTEKT);
-        new AksjonspunktTestSupport().setTilUtført(aksjonspunkt, "utført");
+    @Test
+    void skalFeilHvisTomManuellBrevIkkeErRedigert() {
+        // Arrange
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        UngTestScenario ungTestScenario = EndringInntektScenarioer.endring0KrInntekt_19år(LocalDate.of(2025, 11, 1));
 
+        var behandling = EndringInntektScenarioer
+            .lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
         behandling.avsluttBehandling();
-        var behandlingRepository = ungTestRepositories.repositoryProvider().getBehandlingRepository();
-        behandlingRepository.lagre(behandling, behandlingRepository.taSkriveLås(behandling));
-        return behandling;
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.MANUELT_VEDTAK_DOK , false, false, "tekst")
+        );
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        assertThatThrownBy(() -> task.prosesser(prosessTaskData)).isInstanceOf(IllegalStateException.class).hasMessageContaining("TomVedtaksbrevInnholdBygger");
+
     }
+
+    @Test
+    void skalFeileHvisForsøkerÅBestilleBrevSomIkkeErMulig() {
+        // Arrange
+        UngTestRepositories ungTestRepositories = BrevTestUtils.lagAlleUngTestRepositories(entityManager);
+        UngTestScenario ungTestScenario = EndringInntektScenarioer.endring0KrInntekt_19år(LocalDate.of(2025, 11, 1));
+
+        var behandling = EndringInntektScenarioer
+            .lagBehandlingMedAksjonspunktKontrollerInntekt(ungTestScenario, ungTestRepositories);
+        behandling.avsluttBehandling();
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.ENDRING_INNTEKT , true, false, "<h1>gammelt brev</h1>")
+        );
+
+        vedtaksbrevValgRepository.lagre(
+            new VedtaksbrevValgEntitet(behandling.getId(), DokumentMalType.MANUELT_VEDTAK_DOK , true, false, "<h1>Nytt brev</h1>")
+        );
+
+
+        var prosessTaskData = lagTask(behandling);
+
+        // Act
+        assertThatThrownBy(() -> task.prosesser(prosessTaskData)).isInstanceOf(IllegalStateException.class).hasMessageContaining("valg");
+
+    }
+
 }
